--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@react-navigation/native": "^6.1.3",
     "@react-navigation/stack": "^6.3.12",
     "expo": "~47.0.12",
+    "expo-camera": "~13.1.0",
     "expo-font": "^11.0.1",
+    "expo-media-library": "~15.0.0",
     "expo-splash-screen": "^0.17.5",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
@@ -27,7 +29,10 @@
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-svg": "13.4.0",
-    "react-native-web": "~0.18.9"
+    "react-native-uuid": "^2.0.1",
+    "react-native-web": "~0.18.9",
+    "expo-location": "~15.0.1",
+    "react-native-maps": "1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
