--- a/package.json
+++ b/package.json
@@ -6,36 +6,49 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "lint": "eslint --ext .jsx --ext .js .",
+    "lintFix": "npx eslint --ext .jsx --ext .js src/"
   },
   "dependencies": {
+    "@expo/dev-tools": "^0.13.179",
     "@expo/webpack-config": "^0.17.2",
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.5.4",
     "@react-navigation/native": "^6.1.3",
     "@react-navigation/stack": "^6.3.12",
+    "@reduxjs/toolkit": "^1.9.2",
     "expo": "~47.0.12",
     "expo-camera": "~13.1.0",
+    "expo-dev-menu": "^2.0.2",
     "expo-font": "^11.0.1",
+    "expo-location": "~15.0.1",
     "expo-media-library": "~15.0.0",
     "expo-splash-screen": "^0.17.5",
     "expo-status-bar": "~1.4.2",
+    "firebase": "^9.17.1",
+    "metro": "^0.75.0",
     "react": "18.1.0",
     "react-devtools-core": "^4.27.2",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-gesture-handler": "~2.8.0",
+    "react-native-maps": "1.3.2",
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-svg": "13.4.0",
     "react-native-uuid": "^2.0.1",
     "react-native-web": "~0.18.9",
-    "expo-location": "~15.0.1",
-    "react-native-maps": "1.3.2"
+    "react-redux": "^8.0.5",
+    "expo-image-picker": "~14.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "eslint": "^8.34.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0"
   },
   "private": true
 }
